Secondary Colour bug squashed

--- a/site/assets/scss/globals/_colours.scss
+++ b/site/assets/scss/globals/_colours.scss
@@ -12,5 +12,3 @@ $grey : #E6E6E6;
 .fc-secondary {
     color: $secondary-colour;
 }
-
-$secondary-colour : #001d3d85;
